Added get leaderboard endpoint
