# src/controllers/leaderboard.js
@@ -1,4 +1,4 @@
-import { CacheSortedSetPutElement } from "@gomomento/sdk";
+import { CacheSortedSetPutElement, SortedSetOrder, CacheSortedSetFetch } from "@gomomento/sdk";
 import { getCacheClient, getTopicClient } from "../services/momento.js";
 
 const updateScore = async (gameId, username, points) => {
@@ -24,7 +24,34 @@ const setScore = async (gameId, username, score) => {
   }
 };
 
+const fetch = async (gameId, order, top) => {
+  const sortOrder = order?.toLowerCase() == 'asc' ? SortedSetOrder.Ascending : SortedSetOrder.Descending;
+  const cacheClient = await getCacheClient(['leaderboard']);
+  const leaderboardResponse = await cacheClient.sortedSetFetchByRank('leaderboard', gameId, {
+    order: sortOrder,
+    ...top && {
+      startRank: 0,
+      endRank: top
+    }
+  });
+
+  if (leaderboardResponse instanceof CacheSortedSetFetch.Miss) {
+    return { success: false, error: 'GameNotFound' };
+  }
+
+  const leaderboard = leaderboardResponse.valueArray().map((element, rank) => {
+    return {
+      rank: rank + 1,
+      username: element.value,
+      score: Math.floor(element.score)
+    }
+  });
+
+  return { success: true, leaderboard };
+};
+
 export const Leaderboard = {
   updateScore,
-  setScore
+  setScore,
+  fetch
 };
